# remote-m8

./: .gitmodules  Cargo.toml  flake.nix
.github/workflows/: cd.yml  ci.yml
server/: Cargo.toml
server/src/: server.rs
src/: audio.rs  main.rs  serial.rs  server.rs
ui/: .gitignore  Cargo.toml  index.html
ui/assets/: sw.js
ui/src/: app.rs  audio.rs  lib.rs  main.rs  parser.rs
